--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 </h1>
 
 <nav id="back">
-    <a href="home.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="about.html">About</a>
  </nav>
  
