--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1>The 5 Themes of Jennifer and Rachel</h1>
 
         <nav id="back">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About</a>
          </nav>
          
